crates/compiler/tests/parse_errors/unexpected_dollar.elm
module Main exposing (..)
x = 1 $ 2
